--- a/Hotel - 4/css/main.css
+++ b/Hotel - 4/css/main.css
@@ -522,36 +522,58 @@ nav ul li a {
   padding: 2rem;
 }
 
-@media (max-width: 690px ){
-  .row {
-    flex-flow: column;
-    /* align-items: flex-start; */
-  }
-  .xm-hide{
-    display: none;
-  }
-  .lg-hide{
-    display: block;
-  }
-  .footer__label{
-    display: none;
-  }
-  .footer__logo{
-    width: 50%;
-  }
-  .col-4, .col-2{
-    width: 100%;
-    text-align: center;
-  }
-  .social-handles{
-    justify-content: center;
-    flex-flow: row;
-  }
-}
+
 
 
 
 /* INdex -section */
+.search{
+  margin: 0 2rem;
+  width: 50%;
+}
+
+.search__input{
+  background-color: #f7f7f7f7;
+  padding: 0 4rem;
+  width: 70%;
+}
+.flex{
+  display: flex;
+  padding: 2rem 0;
+}
+.group-buttons{
+  padding: 0;
+}
+.just-btn{
+  /* display: inline-block; */
+  padding: .65rem 2rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: transform 250ms;
+}
+
+.just-btn:hover{
+  transform: scale(1.1) translateY(.5rem);
+  cursor: pointer;
+}
+
+.bg-primary{
+  background-color: rgb(0, 217, 255);
+  color: white;
+}
+.bg-dark{
+  background-color: #272626;
+  color: #fff;
+}
+.bg-secondary{
+  background-color: #f7f7f7f7;
+  color: #353535;
+}
+.bg-dark__deep{
+  background-color: #7a7878;
+  color: #fff;
+}
 .rooms__gallery{
   width: 100%;
   display: grid;
@@ -602,12 +624,19 @@ color: white;
   border: none;
   color: white;
   background-color: rgb(0, 217, 255);
+  transition: background-color 250ms;
 }
 .rooms__button2{
   padding: 1rem 2rem;
   border: none;
   color: white;
   background-color: rgb(0, 217, 255);
+  transition: background-color 250ms;
+}
+.rooms__button:hover,
+.rooms__button2:hover{
+  cursor: pointer;
+  background-color: rgba(0, 217, 255, 0.767);
 }
 .col{
   width: 50%;
@@ -618,3 +647,55 @@ color: white;
   text-align: center;
 }
 
+
+@media (max-width: 690px ){
+  .row, .flex {
+    flex-flow: column;
+    /* align-items: flex-start; */
+  }
+  .xm-hide{
+    display: none;
+  }
+  .lg-hide{
+    display: block;
+  }
+  .footer__label{
+    display: none;
+  }
+  .footer__logo{
+    width: 50%;
+  }
+  .col-4, .col-2{
+    width: 100%;
+    text-align: center;
+  }
+  .social-handles{
+    justify-content: center;
+    flex-flow: row;
+  }
+  
+  .search {
+    width: 100%;
+    margin-bottom: 1rem;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+  .search__input{
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .group-buttons{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .just-btn{
+    width: 50%;
+    margin-bottom: 1rem;
+  }
+  .just-btn:not(:first-child){
+    margin-bottom: 1rem;
+  }
+}
