--- a/Hotel - 4/css/main.css
+++ b/Hotel - 4/css/main.css
@@ -268,7 +268,8 @@ input[type=text] {
 }
 .hero-section {
   width: 100%;
-  background: url(../assets/images/SliderImages/Image2.png) no-repeat;
+  background: url(../assets/images/SliderImages/Image2.png);
+  background-repeat: no-repeat;
   overflow: hidden;
   bottom: 0;
   background-position: center;
@@ -276,11 +277,64 @@ input[type=text] {
   font-size: 16px;
   height: 100%;
   padding-bottom: 10rem;
+  backface-visibility: hidden;
+  animation: sliderBack 10000ms ease-in-out infinite 200ms;
+}
+
+@keyframes sliderBack {
+  0% {
+    background:  url(../assets/images/SliderImages/Image2.png);
+    
+  }
+  50% {
+    background: url(../assets/images/SliderImages/Image4.png);
+    background-color: rgba(0, 0, 0,0.4);
+    background-blend-mode: darken;
+  }
+  75% {
+    background: url(../assets/images/SliderImages/Image3.png);
+    background-color: rgba(0, 0, 0,0.4);
+    background-blend-mode: darken;
+  }
+  100% {
+    background: url(../assets/images/SliderImages/Image1.png);
+  }
 }
 
 .bg-teal{
   background-color: rgb(0, 217, 255);
 }
+
+.hum-nav{
+  text-align: center;
+  overflow: hidden;
+}
+
+.hide{
+  display: none;
+}
+
+.show{
+  display: block;
+}
+
+
+.hum-nav li{
+  margin-right: 3rem;
+  transition: 200ms;
+  animation: moveUp 500ms;
+}
+
+@keyframes moveUp{
+  from{
+    transform: translateY(-20rem);
+  }
+}
+.hum-nav li a{
+  color: white;
+}
+
+
 
 nav {
   margin-top: 40px;
@@ -290,6 +344,10 @@ nav ul {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: nowrap;
+}
+
+nav ul:hover{
+  color: rgb(0, 217, 255);
 }
 
 nav ul li {
@@ -519,7 +577,7 @@ nav ul li a {
 
 .header nav{
   margin: 0;
-  padding: 2rem;
+  padding: 3rem 0 ;
 }
 
 
@@ -652,6 +710,16 @@ color: white;
   .row, .flex {
     flex-flow: column;
     /* align-items: flex-start; */
+  }
+  .rooms__body > .row{
+    flex-flow: row;
+  }
+  .row > .rooms__title2{
+    display: none;
+  }
+  .row > .rooms__button{
+    padding: 1rem 2rem;
+    margin: auto;
   }
   .xm-hide{
     display: none;
