--- a/Hotel - 4/css/main.css
+++ b/Hotel - 4/css/main.css
@@ -1,183 +1,447 @@
 /* Rooms and Rate -section */
-.search{
-    margin: 0 2rem;
-    width: 50%;
-  }
-  
-  .search__input{
-    background-color: #f7f7f7f7;
-    padding: 0 4rem;
-    width: 70%;
-  }
-  .flex{
-    display: flex;
-    padding: 2rem 0;
-  }
-  .group-buttons{
-    padding: 0;
-  }
-  .just-btn{
-    /* display: inline-block; */
-    padding: .65rem 2rem;
-    border: none;
-    font-size: 1rem;
-    font-weight: 500;
-    transition: transform 250ms;
-  }
-  
-  .just-btn:hover{
-    transform: scale(1.1) translateY(.5rem);
-    cursor: pointer;
-  }
-  
-  .bg-primary{
-    background-color: rgb(0, 217, 255);
-    color: white;
-  }
-  .bg-dark{
-    background-color: #272626;
-    color: #fff;
-  }
-  .bg-secondary{
-    background-color: #f7f7f7f7;
-    color: #353535;
-  }
-  .bg-dark__deep{
-    background-color: #7a7878;
-    color: #fff;
-  }
-  .rooms__gallery{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 1rem;
-    margin-bottom: 1rem;
-  }
-  .rooms__body{
+.search {
+  margin: 0 2rem;
+  width: 50%;
+}
+
+.search__input {
+  background-color: #f7f7f7f7;
+  padding: 0 4rem;
+  width: 70%;
+}
+.flex {
+  display: flex;
+  padding: 2rem 0;
+}
+.group-buttons {
+  padding: 0;
+}
+.just-btn {
+  /* display: inline-block; */
+  padding: 0.65rem 2rem;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: transform 250ms;
+}
+
+.just-btn:hover {
+  transform: scale(1.1) translateY(0.5rem);
+  cursor: pointer;
+}
+
+.bg-primary {
+  background-color: rgb(0, 217, 255);
   color: white;
-    padding: 1rem;
-    position: absolute;
-    top: 70%;
-    width: 100%;
-  
+}
+.bg-dark {
+  background-color: #272626;
+  color: #fff;
+}
+.bg-secondary {
+  background-color: #f7f7f7f7;
+  color: #353535;
+}
+.bg-dark__deep {
+  background-color: #7a7878;
+  color: #fff;
+}
+.rooms__gallery {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
+}
+.rooms__body {
+  color: white;
+  padding: 1rem;
+  position: absolute;
+  top: 70%;
+  width: 100%;
+}
+.rooms__body::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 217, 255, 0.205);
+}
+.rooms__body::before {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: rgba(25, 28, 29, 0.329);
+  z-index: -1;
+}
+.rooms__title {
+  font-size: 1rem;
+}
+.rooms__title2 {
+  color: white;
+  font-size: 1rem;
+  padding-left: 0.5rem;
+}
+.rooms__text {
+  font-size: 0.7rem;
+}
+.rooms__button {
+  padding: 0 1rem;
+  border: none;
+  color: white;
+  background-color: rgb(0, 217, 255);
+  transition: background-color 250ms;
+}
+.rooms__button2 {
+  padding: 1rem 2rem;
+  border: none;
+  color: white;
+  background-color: rgb(0, 217, 255);
+  transition: background-color 250ms;
+}
+.rooms__button:hover,
+.rooms__button2:hover {
+  cursor: pointer;
+  background-color: rgba(0, 217, 255, 0.767);
+}
+.col {
+  width: 50%;
+}
+
+.center {
+  width: 100%;
+  text-align: center;
+}
+
+@media (max-width: 690px) {
+  .row,
+  .flex {
+    flex-flow: column;
+    /* align-items: flex-start; */
   }
-  .rooms__body::after{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 217, 255, 0.205);
+  .rooms__body > .row {
+    flex-flow: row;
   }
-  .rooms__body::before{
-    content: '';
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    background-color: rgba(25, 28, 29, 0.329);
-    z-index: -1;
+  .row > .rooms__title2 {
+    display: none;
   }
-  .rooms__title{
-    font-size: 1rem;
-  }
-  .rooms__title2{
-    color: white;
-    font-size: 1rem;
-    padding-left: .5rem;
-  }
-  .rooms__text{
-    font-size: .7rem;
-  }
-  .rooms__button{
-    padding: 0 1rem;
-    border: none;
-    color: white;
-    background-color: rgb(0, 217, 255);
-    transition: background-color 250ms;
-  }
-  .rooms__button2{
+  .row > .rooms__button {
     padding: 1rem 2rem;
-    border: none;
-    color: white;
-    background-color: rgb(0, 217, 255);
-    transition: background-color 250ms;
+    margin: auto;
   }
-  .rooms__button:hover,
-  .rooms__button2:hover{
-    cursor: pointer;
-    background-color: rgba(0, 217, 255, 0.767);
+  .xm-hide {
+    display: none;
   }
-  .col{
+  .lg-hide {
+    display: block;
+  }
+  .footer__label {
+    display: none;
+  }
+  .footer__logo {
     width: 50%;
   }
-  
-  .center {
+  .col-4,
+  .col-2 {
     width: 100%;
     text-align: center;
   }
-  
-  
-  @media (max-width: 690px ){
-    .row, .flex {
-      flex-flow: column;
-      /* align-items: flex-start; */
-    }
-    .rooms__body > .row{
-      flex-flow: row;
-    }
-    .row > .rooms__title2{
-      display: none;
-    }
-    .row > .rooms__button{
-      padding: 1rem 2rem;
-      margin: auto;
-    }
-    .xm-hide{
-      display: none;
-    }
-    .lg-hide{
-      display: block;
-    }
-    .footer__label{
-      display: none;
-    }
-    .footer__logo{
-      width: 50%;
-    }
-    .col-4, .col-2{
-      width: 100%;
-      text-align: center;
-    }
-    .social-handles{
-      justify-content: center;
-      flex-flow: row;
-    }
-    
-    .search {
-      width: 100%;
-      margin-bottom: 1rem;
-      text-align: center;
-      padding: 0;
-      margin: 0;
-    }
-    .search__input{
-      width: 100%;
-      margin-bottom: 1rem;
-    }
-    .group-buttons{
-      display: flex;
-      flex-flow: column;
-      justify-content: center;
-      align-items: center;
-    }
-    .just-btn{
-      width: 50%;
-      margin-bottom: 1rem;
-    }
-    .just-btn:not(:first-child){
-      margin-bottom: 1rem;
-    }
+  .social-handles {
+    justify-content: center;
+    flex-flow: row;
   }
+
+  .search {
+    width: 100%;
+    margin-bottom: 1rem;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+  .search__input {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  .group-buttons {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .just-btn {
+    width: 50%;
+    margin-bottom: 1rem;
+  }
+  .just-btn:not(:first-child) {
+    margin-bottom: 1rem;
+  }
+}
+
+/* nav and home */
+/*Home - Section */
+* a {
+  text-decoration: none;
+}
+* li {
+  list-style: none;
+}
+.hero-section {
+  width: 100%;
+  background: url(../assets/images/SliderImages/Image2.png);
+  background-repeat: no-repeat;
+  overflow: hidden;
+  bottom: 0;
+  background-position: center;
+  background-size: cover;
+  font-size: 16px;
+  height: 100%;
+  padding-bottom: 10rem;
+  backface-visibility: hidden;
+  animation: sliderBack 10000ms ease-in-out infinite 200ms;
+}
+
+@keyframes sliderBack {
+  0% {
+    background: url(../assets/images/SliderImages/Image2.png);
+  }
+  50% {
+    background: url(../assets/images/SliderImages/Image4.png);
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: darken;
+  }
+  75% {
+    background: url(../assets/images/SliderImages/Image3.png);
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: darken;
+  }
+  100% {
+    background: url(../assets/images/SliderImages/Image1.png);
+  }
+}
+
+.bg-teal {
+  background-color: rgb(0, 217, 255);
+}
+
+.hum-nav {
+  text-align: center;
+  overflow: hidden;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.hum-nav li {
+  margin-right: 3rem;
+  transition: 200ms;
+  animation: moveUp 500ms;
+}
+
+@keyframes moveUp {
+  from {
+    transform: translateY(-20rem);
+  }
+}
+.hum-nav li a {
+  color: white;
+}
+
+nav {
+  margin-top: 40px;
+  padding: 20px;
+}
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+}
+
+nav ul:hover {
+  color: rgb(0, 217, 255);
+}
+
+nav ul li {
+  margin-left: 10px;
+  line-height: 2em;
+  vertical-align: middle;
+}
+nav ul .nav-item3 {
+  margin-top: -30px;
+}
+nav ul li a {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 2em;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  justify-content: space-evenly;
+  width: 50%;
+  margin-left: 6vw;
+  color: #fff;
+}
+.hero-text .p1 {
+  font-size: 45px;
+  text-transform: uppercase;
+}
+.hero-text .p2 {
+  font-size: 20px;
+}
+.hero-text form input {
+  padding: 10px;
+  font-size: 17px;
+  border: none;
+}
+.hero-text form button {
+  padding: 10px 10px;
+  margin-left: -4px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+.hero-text form button:hover {
+  background-color: lightslategray;
+}
+.btns {
+  margin-top: 30px;
+}
+.btns button {
+  padding: 10px 10px;
+  border-radius: 2px;
+  border: 0;
+  margin-right: 15px;
+  cursor: pointer;
+}
+.btn1 {
+  background-color: rgb(0, 217, 255);
+  color: #fff;
+}
+.btn2 {
+  background-color: #ddd;
+  color: #333;
+}
+.btn3 {
+  color: #fff;
+  background-color: dimgray;
+}
+@media only screen and (min-width: 376px) {
+  nav ul li:last-child {
+    display: none;
+  }
+}
+@media only screen and (max-width: 655px) {
+  nav ul li a {
+    display: none;
+  }
+  nav ul li:last-child {
+    display: block;
+  }
+  .btns {
+    margin-top: 30px;
+  }
+  .btns button {
+    padding: 10px 10px;
+    border-radius: 2px;
+    border: 0;
+    margin-right: 15px;
+    cursor: pointer;
+    width: 150px;
+  }
+  .btn1 {
+    background-color: rgb(0, 217, 255);
+    color: #fff;
+    margin-bottom: 10px;
+  }
+  .btn2 {
+    background-color: #ddd;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  .btn3 {
+    color: #fff;
+    background-color: dimgray;
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 375px) {
+  nav ul li {
+    align-self: end;
+    margin-top: -30px;
+    margin-left: 30px;
+  }
+
+  nav ul li a {
+    display: none;
+  }
+  nav ul .nav-item3 {
+    display: none;
+  }
+  .hero-text {
+    color: #fff;
+  }
+  .hero-text .p1 {
+    font-size: 30px;
+    text-transform: uppercase;
+  }
+  .hero-text .p2 {
+    font-size: 20px;
+  }
+  .hero-text form input {
+    padding: 10px;
+    font-size: 17px;
+    border: none;
+  }
+  .hero-text form button {
+    margin-left: 1px;
+    padding: 10px 10px;
+    background: #ddd;
+    font-size: 13px;
+    border: none;
+    cursor: pointer;
+  }
+  .hero-text form button:hover {
+    background-color: lightslategray;
+  }
+  .btns {
+    margin-top: 30px;
+  }
+  .btns button {
+    padding: 10px 10px;
+    border-radius: 2px;
+    border: 0;
+    margin-right: 15px;
+    cursor: pointer;
+    width: 150px;
+  }
+  .btn1 {
+    background-color: rgb(0, 217, 255);
+    color: #fff;
+    margin-bottom: 10px;
+  }
+  .btn2 {
+    background-color: #ddd;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  .btn3 {
+    color: #fff;
+    background-color: dimgray;
+    margin-bottom: 10px;
+  }
+}
