--- a/Hotel - 4/css/main.css
+++ b/Hotel - 4/css/main.css
@@ -337,8 +337,8 @@ input[type=text] {
 
 
 nav {
-  margin-top: 40px;
-  padding: 20px;
+  
+  padding: 5rem 5rem 2rem;
 }
 nav ul {
   display: flex;
